--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-{"atrend":"cs","ATRENDNHI":"https://atrendcapitalstock.net","gsjyud":"dd"}
+{"dsafgr":"cs","privacy":"https://atrendcapitalstock.net","gsjyud":"dd"}
